# robotframeworkMBT

./: .gitignore  CONTRIBUTING.md  FloatingObject.py  Iceberg.py  LICENSE  README.md  TitanicInOcean.py  pyproject.toml  run_tests.py
.github/workflows/: autopep8.yml  python-app.yml  run-demo.yml  run-tests.yml
DESIGN/VPP/: RobotMBT.vpp
atest/: run_tests.py
atest/resources/: birthday_cards_action-driven.resource  birthday_cards_composed.resource  birthday_cards_data_variation.resource  birthday_cards_flat.resource  birthday_cards_layered.resource  visualisation.resource
demo/Titanic/: 0__Fastest_service.robot  1__Itinerary.robot  2__Iceberg_alley.robot  Departures.robot  Lifeboats.robot  Passenger_boarding.robot  README.md  Titanic_the_ship.resource  __init__.robot  main.py  requirements.txt  run_demo.py  run_game.py  step_defs.resource
robotmbt/: SuiteProcessors.py  SuiteReplacer.py  __init__.py  equivalenceclass.py  modeller.py  modelspace.py  steparguments.py  substitutionmap.py  suitedata.py  suiteprocessors.py  suitereplacer.py  tracestate.py  version.py
robotmbt/visualise/: models.py  networkvisualiser.py  visualiser.py
src/: Journey.py  Ocean.py  Titanic.py  main.py
utest/: test_modeller.py  test_modelspace.py  test_steparguments.py  test_substitutionmap.py  test_suitedata.py  test_suiteprocessors.py  test_tracestate.py  test_tracestate_refinement.py  test_visualise_abstractgraph.py  test_visualise_models.py  test_visualise_scenariodeltavaluegraph.py  test_visualise_scenariograph.py  test_visualise_scenariostategraph.py  test_visualise_stategraph.py
(+230 files in other folders)
